1999-07-27  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/reloc.d: Fix so that test passes when enable-targets
	includes 64-bit bfd target.

1999-06-13  Ian Lance Taylor  <ian@zembu.com>

	* gas/i386/katmai.d: Tweak for recent disassembler changes.

1999-06-12  Ian Lance Taylor  <ian@zembu.com>

	* gas/elf/elf.exp: Don't run tests on "*-*-linux*aout*" or
	"*-*-linux*oldld*".
	* gas/vtable/vtable.exp: Likewise.
	* gas/i386/reloc.d: Modify expected reloc names to accept a.out
	names.

	* gas/i386/amd.s: Add a symbol so a.out tests will work.
	* gas/i386/katmai.s: Likewise.
	* gas/i386/amd.d: Corresponding change.
	* gas/i386/katmai.d: Corresponding change.

1999-06-10  Ian Lance Taylor  <ian@zembu.com>

	* gas/mips/sync.d: Pass -mips2 to the assembler.

	* gas/mips/elf_e_flags.s: Tweak code so that the tests pass for
	mips-elf target as well as mips64-elf target.
	* gas/mips/elf_e_flags1.d: Corresponding changes.
	* gas/mips/elf_e_flags2.d: Likewise.
	* gas/mips/elf_e_flags3.d: Likewise.
	* gas/mips/elf_e_flags4.d: Likewise.

	* gas/elf/elf.exp: Add setup_xfail for mips*-*-*.

	* gas/all/itbl-test.c (main): Update itbl_get_reg_val call for new
	parameter.

1999-06-10  Jakub Jelinek  <jj@ultra.linux.cz>

	* gas/sparc/synth64.s: Add checks for single register signx/clruw.
	* gas/sparc/set64.s: Add tests for setuw and setsw synthetic insns.
	* gas/sparc/prefetch.d: Add -64 as switch.
	* gas/sparc/rdpr.d: Ditto.
	* gas/sparc/wrpr.d: Ditto.
	* gas/sparc/synth64.d: Ditto, reflect synth64.s changes.
	* gas/sparc/reloc64.d: Add -64 as switch, be more tolerant, as
	current gas outputs %hi(0) and not %hi(0x0).
	* gas/sparc/set64.d: Add -64 as switch, reflect set64.s changes and
	optimizations for setx instruction.
	* gas/sparc/sparc.exp: Do sparc64*-*-* checks if it is any of the
	compiled-in targets.

1999-06-10  Richard Henderson  <rth@cygnus.com>

	* gas/macros/irp.s: Use `foo' and `bar' instead of `r' and `s'.