@@ -79,3 +79,7 @@
   66 007e DEF9 [ 	]*fdivrp
   67 0080 DEFB [ 	]*fdivrp	%st\(3\)
   68 0082 DEFB [ 	]*fdivrp	%st,%st\(3\)
+  69 [ 	]*
+  70 0084 00000000 [ 	]*.p2align	4,0
+  70      00000000 
+  70      00000000 
