@@ -66,3 +66,5 @@
 	fdivrp
 	fdivrp	%st(3)
 	fdivrp	%st,%st(3)
+
+	.p2align	4,0
